--- a/src/containers/LoginPopup/LoginPopup.scss
+++ b/src/containers/LoginPopup/LoginPopup.scss
@@ -1,12 +1,16 @@
 .loginform {
   position: absolute;
-  left: 30%;
-  right: 30%;
-  top: 15%;
-  bottom: 15%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   margin: auto;
   background: #0f1835;
   text-align: center;
+  height: 100%;
+  max-height: 880px;
+  width: 100%;
+  max-width: 660px;
 
   .logininner {
     // height: 100%;
@@ -14,8 +18,13 @@
 
     position: absolute;
     width: 100%;
+    height: 50%;
     top: 50%;
     transform: translateY(-50%);
+
+    div {
+      height: auto;
+    }
 
     .title {
       width: 100%;
@@ -95,20 +104,28 @@
 }
 .registerform {
   position: absolute;
-  left: 30%;
-  right: 30%;
-  top: 15%;
-  bottom: 15%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   margin: auto;
   background: #0f1835;
   text-align: center;
+  height: 100%;
+  max-height: 880px;
+  width: 100%;
+  max-width: 660px;
 
   .registerinner {
     position: absolute;
     width: 100%;
+    height: 50%;
     top: 50%;
     transform: translateY(-50%);
 
+    div {
+      height: auto;
+    }
     .title {
       width: 100%;
       height: 64px;
