--- a/src/containers/Enrolment/Function/Enrolment.scss
+++ b/src/containers/Enrolment/Function/Enrolment.scss
@@ -307,6 +307,7 @@
         .stuff-add {
             display: block;
             width: 100%;
+            cursor: pointer;
         }
 
         .stuff-add::after {
@@ -350,8 +351,30 @@
                         padding-bottom: 10%;
                         margin-left: 5%;
                         float: left;
-                        background-color: #707070;
+                        // background-color: #4d191a;
                         box-sizing: border-box;
+                    }
+
+                    .color-picker {
+                        position: absolute;
+                        top: 10%;
+                        left: -180px;
+                        z-index: 2;
+                        background-color: #fff;
+                        padding: 5px 5px 10px 5px;
+                        border-radius: 2px;
+                        box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.8);
+
+                        .picker-background {
+                            display: block;
+                            position: fixed;
+                            width: 100%;
+                            height: 100%;
+                            top: 0;
+                            left: 0;
+                            background: transparent;
+                            z-index: -1;
+                        }
                     }
         
                     .stuff-item-input-stuff {
