### #19 반응형 레이아웃 작업 See: Github issue #19 --------------------------------------- ### 작업파일 * action/userAction.js * api/userAPI.js * containers/Header/Header.jsx * containers/LoginPopup/LoginPopup.jsx * containers/MainView/MainView.jsx * containers/SearchPopup/SearchPopup.scss * reducer/userReducer.js * saga/userSaga.js --------------------------------------- ### 작업내용 * 로그인, 회원가입 서버 통신 기능 추가 * 회원 가입 시 로그인 창으로 이동되도록 수정 * 로그아웃 기능 추가 * 검색 레이아웃 콤보 위치 수정 * 헤더 레이아웃에서 로그인, 검색 팝업 호출하여 사용

--- a/src/containers/SearchPopup/SearchPopup.scss
+++ b/src/containers/SearchPopup/SearchPopup.scss
@@ -3,6 +3,7 @@
 .topcotainer {
   display: flex;
   height: 145.3px;
+  align-items: center;
   justify-content: center;
   background-color: $main-color;
 
@@ -20,22 +21,16 @@
   }
 
   .filter {
-    top: 0;
-    bottom: 0;
-    margin-top: auto;
-    margin-bottom: auto;
     width: 123px;
     min-width: 123px;
+    height: auto;
   }
   .type {
-    top: 0;
-    bottom: 0;
-    margin-top: auto;
-    margin-bottom: auto;
     margin-left: 70px;
     width: 123px;
     min-width: 123px;
     margin-right: 201px;
+    height: auto;
   }
 }
 
@@ -73,9 +68,9 @@
     &:focus {
       color: #83d1e6;
       outline: none;
-      border-radius: 34px;
-      padding: 8px 26px 10px 26px;
-      border: solid 2px #83d1e6;
+      // border-radius: 34px;
+      // padding: 8px 26px 10px 26px;
+      // border: solid 2px #83d1e6;
     }
   }
   .prev {
