--- a/src/containers/ViewRecipe/Function/ViewRecipe.scss
+++ b/src/containers/ViewRecipe/Function/ViewRecipe.scss
@@ -1,7 +1,7 @@
 .detail-content-header {
   display: table;
   position: relative;
-  width: 1520px;
+  width: 100%;
   padding: 0 30px 0 42px;
   height: 100px;
   box-sizing: border-box;
@@ -51,8 +51,8 @@
 
 .detail-content-main-view-cup {
   position: absolute;
-  width: 478px;
-  height: 690px;
+  width: 50%;
+  height: 90%;
   border: 1px solid #707070;
   box-sizing: border-box;
   left: 50%;
@@ -62,8 +62,9 @@
 
 .detail-content-main-view-image {
   position: absolute;
-  width: 960px;
-  height: 710px;
+  display: block;
+  width: 70%;
+  padding-bottom: 70%;
   border: 1px solid #707070;
   box-sizing: border-box;
   left: 50%;
@@ -72,9 +73,9 @@
 }
 
 .detail-content-main-side-info {
-  width: 396px;
-  height: 662px;
-  padding: 46px 41px 0 41px;
+  width: 80%;
+  height: 86%;
+  padding: 7% 10%;
 
   .side-info {
     display: block;
@@ -85,12 +86,6 @@
 
   .side-info:nth-child(1) {
     margin-top: 0;
-  }
-
-  .content {
-    font-weight: normal;
-    margin-top: 21px;
-    color: #97d9eb;
   }
 
   .side-info-alcohol {
@@ -108,6 +103,16 @@
       box-sizing: border-box;
       border-radius: 10px;
     }
+    
+  }
+
+  .content {
+    font-weight: normal;
+    margin-top: 21px;
+  }
+
+  .tags {
+    color: #97d9eb;
   }
 
   .side-info-alcohol::after {
@@ -119,17 +124,19 @@
 }
 
 .detail-content-main-side-stuff {
-  width: 480px;
-  height: 662px;
+  position: relative;
+  width: 100%;
+  height: calc(100% - 60px);
   
   .detail-content-main-side-stuff-container {
     position: absolute;
+    width: 100%;
     bottom: 0;
 
     .detail-content-main-side-stuff-item {
-      width: 430px;
-      margin: 0 25px;
-      padding: 22px 0 26px;
+      width: 90%;
+      margin: 0 5%;
+      padding: 22px 0;
       border-top: 1px solid #707070;
 
       span::before {
@@ -142,31 +149,37 @@
       span {
         font-size: 20px;
         font-weight: normal;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
       }
 
       .stuff-color {
         display: inline-block;
-        width: 35px;
-        height: 35px;
+        width: 8%;
         border: 1px solid #707070;
         border-radius: 5px;
         box-sizing: border-box;
-        margin-left: 22px;
+        margin-left: 5%;
       }
 
       .stuff-name {
-        font-size: 20px;
-        margin-left: 23px;
+        display: inline-block;
+        width: 35%;
+        margin-left: 5%;
       }
 
       .stuff-volume {
+        display: inline-block;
+        width: 15%;
         font-size: 15px;
-        margin-left: 71px;
+        margin-left: 5%;
       }
 
       .stuff-ratio {
-        font-size: 20px;
-        margin-left: 83px;
+        display: inline-block;
+        width: 15%;
+        margin-left: 10%;
       }
     }
 
@@ -179,13 +192,13 @@
 }
 
 .detail-content-main-side-photo {
-  padding: 45px;
+  margin: 10%;
 
   .photo-item {
     display: inline-block;
-    width: 120px;
-    height: 120px;
-    margin: 0 10px 10px 0;
+    width: 31%;
+    padding-bottom: 25%;
+    margin: 0 3.5% 3.5% 0;
     border: 1px solid #707070;
     box-sizing: border-box;
   }
@@ -195,87 +208,95 @@
   }
 }
 
-.detail-content-main-side-comment-container {
-  height: 634px;
+.detail-content-main-side-comment {
+  height: calc(100% - 60px);
 
-  .detail-content-main-side-comment-item {
-    position: relative;
-    width: 430px;
-    margin: 0 25px;
-    padding: 22px 0 26px;
-    border-bottom: 1px solid #707070;
+  .detail-content-main-side-comment-container {
+    height: calc(100% - 74px);
 
-    span::before {
-      content: '';
-      display: inline-block;
-      vertical-align: middle;
-      height: 100%;
+    .detail-content-main-side-comment-item {
+      position: relative;
+      width: 90%;
+      margin: 0 5%;
+      padding: 4% 0;
+      border-bottom: 1px solid #707070;
+  
+      span::before {
+        content: '';
+        display: inline-block;
+        vertical-align: middle;
+        height: 100%;
+      }
+  
+      span {
+        display: inline-block;
+        font-weight: normal;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+  
+      .comment-name {
+        width: 20%;
+        font-size: 15px;
+        margin-left: 5%;
+        font-weight: bold;
+      }
+  
+      .comment-content {
+        width: 60%;
+        font-size: 15px;
+        margin-left: 5%;
+        font-weight: normal;
+      }
+  
+      .comment-time {
+        display: block;
+        position: absolute;
+        font-size: 10px;
+        font-weight: normal;
+        right: 0;
+        bottom: 10%;
+      }
     }
+  }
 
-    span {
-      display: inline-block;
-      font-weight: normal;
-    }
-
-    .comment-name {
-      font-size: 15px;
-      margin-left: 16px;
-      font-weight: bold;
-    }
-
-    .comment-content {
-      font-size: 15px;
-      margin-left: 20px;
-      font-weight: normal;
-    }
-
-    .comment-time {
+  .detail-content-main-side-comment-input {
+    height: 74px;
+    box-sizing: border-box;
+  
+    .comment-input {
       display: block;
-      position: absolute;
-      font-size: 10px;
-      font-weight: normal;
-      right: 0;
-      bottom: 8px;
+      position: relative;
+      width: 80%;
+      padding: 2.5% 5%;
+      margin: 0 0 5% 5%;
+      float: left;
+      top: 50%;
+      transform: translateY(-50%);
+      border-radius: 20px;
+      background-color: transparent;
+      border: solid 1px #ffffff;
+      box-sizing: border-box;
+      font-size: 15px;
+      font-weight: 300;
+      text-align: left;
+      color: #ffffff;
     }
-  }
-}
-
-.detail-content-main-side-comment-input {
-  height: 74px;
-  box-sizing: border-box;
-
-  .comment-input {
-    display: block;
-    position: relative;
-    width: 372px;
-    height: 40px;
-    padding: 0 20px;
-    margin-left: 17px;
-    float: left;
-    top: 50%;
-    transform: translateY(-50%);
-    border-radius: 20px;
-    background-color: transparent;
-    border: solid 1px #ffffff;
-    box-sizing: border-box;
-    font-size: 15px;
-    font-weight: 300;
-    text-align: left;
-    color: #ffffff;
-  }
-
-  .comment-button {
-    display: block;
-    position: relative;
-    width: 40px;
-    height: 40px;
-    margin-right: 25px;
-    float: right;
-    top: 50%;
-    transform: translateY(-50%);
-    border: solid 1px #ffffff;
-    background-color: transparent;
-    border-radius: 20px;
-    box-sizing: border-box;
+  
+    .comment-button {
+      display: block;
+      position: relative;
+      width: 8%;
+      padding-bottom: 8%;
+      margin-right: 5%;
+      float: right;
+      top: 50%;
+      transform: translateY(-50%);
+      border: solid 1px #ffffff;
+      background-color: transparent;
+      border-radius: 100%;
+      box-sizing: border-box;
+    }
   }
 }
