--- a/src/containers/ViewRecipe/ViewRecipe.scss
+++ b/src/containers/ViewRecipe/ViewRecipe.scss
@@ -8,33 +8,54 @@
   font-style: normal;
   font-stretch: normal;
   letter-spacing: normal;
-  color: #ffffff;
+  color: #fff;
 
   .detail-content {
     position: absolute;
-    width: 1520px;
-    height: 868px;
+    width: 80%;
+    height: 90%;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
     background-color: #080f24;
+
+    .detail-content-arrow {
+      display: block;
+      position: absolute;
+      width: 1.5%;
+      height: 6%;
+      top: 50%;
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      cursor: pointer;
+
+      border: 1px solid #000;
+    }
+
+    .left {
+      left: -4%;
+    }
+
+    .right {
+      right: -4%;
+    }
   
     .detail-content-main {
       position: relative;
       width: 100%;
-      height: 768px;
+      height: calc(100% - 100px);
   
       .detail-content-main-view {
         float: left;
         position: relative;
-        width: 1040px;
+        width: 70%;
         height: 100%;
       }
   
       .detail-content-main-side {
         float: right;
-        width: 480px;
+        width: 30%;
         height: 100%;
         background-color:#0f1835;
 
@@ -72,5 +93,37 @@
       clear: both;
     }
   
+  }
+
+  .side-button-container {
+    position: absolute;
+    width: 10%;
+    height: 100%;
+    right: 0;
+
+    .side-button-area {
+      position: absolute;
+      width: 40%;
+      height: 90%;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+
+      span {
+        display: block;
+        width: 100%;
+        padding-bottom: 100%;
+        margin-bottom: 20%;
+        border: 1px solid #080f24;
+        border-radius: 100%;
+        cursor: pointer;
+      }
+
+      span:last-child{
+        position: absolute;
+        bottom: 0;
+        margin: 0;
+      }
+    }
   }
 }
