### #24 랜덤 태그 추천기능/태그 검색 기능 See: Github issue #24 --------------------------------------- ### 작업파일 * searchAction.js * searchAPI.js * Button.jsx * MainView.jsx/scss * SearchPopup.jsx * searchReducer.js * searchSaga.js --------------------------------------- ### 작업내용 * searchAction에 랜덤 태그 액션 추가, 기존 검색 액션 그대로 재활용 * api에 get 방식 랜덤태그 가져오는 함수 추가 * Button 컴포넌트 인자 받는 방식 변경 및 id, key property추가 * MainPage에 랜덤 태그 가져오기, 태그 검색 결과 반영 되도록 수정 / 랜덤 태그 map사용하여 생성하도록 수정 / 태그 선택 된 경우 classname 변경 시킴 / 더미 데이타 삭제 * searchPopup 인자 잘못넘겨주던거 수정 * searchReducer에 랜덤 태그 가져오는 부분 추가 * Saga에 dumyData 추가 서버 수정 후 dumyData 제거

--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -190,7 +190,7 @@ body {
             margin-left: 0%;
           }
 
-          &:focus {
+          &.selected {
             color: #83d1e6;
           }
         }
