#16 레시피 보기 See: Github issue #16 --------------------------------------- ### 작업파일 * action/recipeAction.js * api -> recipeAPI.js, rootAPI.js * reducer -> recipeReducer.js, rootReducer.js * saga -> recipeSaga.js, rootSaga.js * ViewRecipe.jsx,scss --------------------------------------- ### 작업내용 * axios 사용을 위한 saga, redux 세팅 * action, api, saga, reducer 생성 * 서버에서 get 방식으로 body 를 받는 형태로 구현하여 파라미터로 받는거로 변경하기 전까지 작업 중단

--- a/src/containers/ViewRecipe/Function/ViewRecipe.scss
+++ b/src/containers/ViewRecipe/Function/ViewRecipe.scss
@@ -25,6 +25,7 @@
 
     .detail-content-header-info-count {
       display: block;
+      height: 51px;
 
       span::before {
         content: '';
