#15 레시피 등록 See: Github issue #15 --------------------------------------- ### 작업파일 * 등록 관련 파일들 	* action, api, saga, reducer, container 아래 등록 관련 파일들 * 레시피 보기 관련 파일들 * HTML_TEST --------------------------------------- ### 작업내용 * 레시피 등록 api 연동 * api 이슈 해결 이후 레시피 보기에 맞게 컨버팅 * 테스트용 컴포넌트 삭제

--- a/src/containers/Enrolment/Function/Enrolment.scss
+++ b/src/containers/Enrolment/Function/Enrolment.scss
@@ -106,6 +106,10 @@
     float: left;
     margin-left: 30px;
 
+    div {
+        height: auto;
+    }
+
     .title {
         font-size: 20px;
         font-weight: 500;
@@ -281,6 +285,10 @@
     position: relative;
     float: left;
     margin-left: 30px;
+
+    div {
+        height: auto;
+    }
 
     .shake {
         width: 100%;
@@ -467,6 +475,10 @@
     float: left;
     box-sizing: border-box;
     padding-right: 6.6667%;
+
+    div {
+        height: auto;
+    }
 
     .step3-container {
         width: 100%;
