### #24 랜덤 태그 추천기능/태그 검색 기능 See: Github issue #24 --------------------------------------- ### 작업파일 * rootAPI.js * searchAPI.js * SearchResultItem.jsx * MainView.jsx/scss * searchSaga.js --------------------------------------- ### 작업내용 * get 통신 시 Params 사용 하도록 수정 * 랜덤태그 경로 수정 * 칵테일 섬네일 아이템 수정 * MainPage 통신 결과에 맞게 수정 * 불필요한 더미코드 제거

--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -264,6 +264,7 @@ body {
           display: inline-block;
           position: relative;
           width: 360px;
+          min-width: 360px;
           margin-right: 26px;
           &:hover {
             img {
