--- a/src/containers/naverAPI/naverAPI.scss
+++ b/src/containers/naverAPI/naverAPI.scss
@@ -1,15 +1,10 @@
 .item {
-  width: 250px;
+  max-width: 360px;
   opacity: 1;
   height: auto;
 
-  .thumbnail {
-    max-height: 300px;
-    overflow: hidden;
-    border-radius: 8px;
-    img {
-      width: 100%;
-    }
+  img {
+    width: 100%;
   }
   .info {
     margin-top: 10px;
@@ -20,6 +15,16 @@
     transition: opacity ease 1s;
     transition-delay: 0.2s;
     opacity: 1;
+  }
+
+  &:hover {
+    img {
+      opacity: 0.7;
+    }
+
+    div {
+      visibility: visible;
+    }
   }
 }
 .loading {
