--- a/src/containers/Enrolment/Function/Enrolment.scss
+++ b/src/containers/Enrolment/Function/Enrolment.scss
@@ -485,38 +485,16 @@
         height: 100%;
         box-sizing: border-box;
 
-        .thums-image {
-        display: block;
-        width: 100%;
-        height: 80%;
-        border: 1px solid #707070;
-        box-sizing: border-box;
-      }
-
-      .other-image {
-        height: 15%;
-        padding-top: 5%;
-
-        .images-item {
-          display: inline-block;
-          position: relative;
-          width: 11.625%;
-          padding-bottom: 11.625%;
-          margin-right: 1%;
-          border: 1px solid #707070;
-          box-sizing: border-box;
+        .delete-thumb {
+            display: block;
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            right: 0;
+            top: 0;
+            background-color: #fff;
+            z-index: 9999;
         }
-
-        .images-item:last-child {
-          margin-right: 0;
-        }
-      }
-
-      .other-image::after {
-        display: block;
-        content: '';
-        clear: both;
-      }
     }
 }
 
