### #27 마이메뉴 레이아웃 See: Github issue #27 --------------------------------------- ### 작업파일 * SearchResultItem.jsx/scss * MyMenu.jsx * SearchResult.jsx/scss --------------------------------------- ### 작업내용 * 검색 결과 레이아웃에 수정 활성화 인자 추가 * 검색 결과 레이아웃에서 수정 버튼클릭 시 팝업창 위치하도록 기능 추가 * 검색 결과 아이템 컴포넌트에 수정 버튼 추가

--- a/src/containers/SearchResult/SearchResult.scss
+++ b/src/containers/SearchResult/SearchResult.scss
@@ -27,3 +27,26 @@
     }
   }
 }
+
+.modify_popup {
+  position: absolute;
+  height: 135px;
+  width: 134px;
+  background-color: #18184e;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.7);
+  z-index: 1;
+  color: #ffffff;
+  font-size: 15px;
+  text-align: center;
+  .container {
+    width: auto;
+    height: auto;
+    margin-top: 30px;
+
+    .text {
+      display: inline-block;
+      width: auto;
+      cursor: pointer;
+    }
+  }
+}
