--- a/src/components/SearchResultItem/SearchResultItem.scss
+++ b/src/components/SearchResultItem/SearchResultItem.scss
@@ -4,6 +4,29 @@
   height: inherit;
 }
 
+.modify_rect {
+  top: 0;
+  right: 0;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  margin-top: 25px;
+  margin-right: 20px;
+  z-index: 100;
+
+  .modify_container {
+    color: #ffffff;
+    width: 100%;
+    height: 100%;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    writing-mode: tb-rl;
+    line-height: 10px;
+    cursor: pointer;
+  }
+}
+
 .information_rect {
   visibility: hidden;
   position: absolute;
@@ -20,6 +43,7 @@
     bottom: 0px;
     height: auto;
     color: white;
+
     .cocktailName {
       text-overflow: ellipsis;
       white-space: nowrap;
