### #22 헤더 수정 See: Github issue #22 --------------------------------------- ### 작업파일 * Header.jsx/scss --------------------------------------- ### 작업내용 * 로그인시 userpopup보이도록 추가 * 로그아웃 call 위치 옮김

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -94,6 +94,33 @@
         outline: none;
         cursor: pointer;
       }
+
+      .user_popup {
+        position: absolute;
+        width: 166px;
+        height: 186px;
+        margin-top: 70px;
+        margin-right: 90px;
+        right: 0;
+        background-color: #18184e;
+        box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.7);
+        z-index: 1;
+        color: #ffffff;
+        font-size: 15px;
+        text-align: center;
+        .container {
+          width: auto;
+          height: auto;
+          margin-top: 30px;
+          background-color: #18184e;
+
+          .text {
+            display: inline-block;
+            width: auto;
+            cursor: pointer;
+          }
+        }
+      }
     }
   }
 
