### #32 로그인/회원가입 고도화 See: Github issue #32 --------------------------------------- ### 작업파일 * LoginPopup.jsx/scss * MainView.jsx/scss --------------------------------------- ### 작업내용 * react-spinners-kit 모듈 추가(로딩시 사용할 컴포넌트) * styled-components 모듈 추가(spinners사용 시 필요) * 메인페이지(태그 검색 결과), 로그인/회원가입에 통신 시 로딩 컴포넌트 추가

--- a/src/containers/LoginPopup/LoginPopup.scss
+++ b/src/containers/LoginPopup/LoginPopup.scss
@@ -26,6 +26,21 @@
       height: auto;
     }
 
+    .loading_rect {
+      div {
+        position: absolute;
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        margin-left: -60px;
+        vertical-align: middle;
+      }
+
+      &._hide {
+        display: none;
+      }
+    }
+
     .close_button_rect {
       width: 30px;
       height: 30px;
@@ -144,6 +159,21 @@
 
     div {
       height: auto;
+    }
+
+    .loading_rect {
+      div {
+        position: absolute;
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        margin-left: -60px;
+        vertical-align: middle;
+      }
+
+      &._hide {
+        display: none;
+      }
     }
 
     .close_button_rect {
