--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -34,6 +34,7 @@
       margin-top: 15px;
       margin-left: 30px;
       margin-bottom: 14px;
+      cursor: pointer;
     }
 
     .right_container {
@@ -77,7 +78,10 @@
           margin-left: 20px;
           margin-top: 20.1px;
           margin-right: 20.3px;
-          background-color: #ffffff;
+          background-color: transparent;
+          background-image: url("../../static/images/user_button.png");
+          background-repeat: no-repeat;
+          background-size: contain;
         }
       }
 
