### #36 메인페이지 레이아웃 및 스크롤 변경 See: Github issue #36 --------------------------------------- ### 작업파일 * MainView.scss * color.scss --------------------------------------- ### 작업내용 * 메인 페이지 font style, color, logo image 변경

--- a/src/static/colors.scss
+++ b/src/static/colors.scss
@@ -17,9 +17,9 @@ $logo-color: #ff365d;
 $logo-size: 30px;
 $logo-family: SegoeUI;
 
-$title-color: #ff365d;
+$title-color: $white;
 $title-size: 55px;
-$title-family: LasEnterPersonalUseOnly;
+$title-family: AvenirLT;
 
 $contents-color: #7a7a7a;
 $contents-size: 45px;
