--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -51,7 +51,7 @@ body {
         height: 117px;
         margin-top: 6px;
         margin-right: 20px;
-        background-image: url("../../static/images/logo/main_left_logo_h.png");
+        background-image: url("../../static/images/main_logo.svg");
         background-repeat: no-repeat;
         background-size: contain;
       }
@@ -59,21 +59,28 @@ body {
     .title {
       grid-column: 2 / span 2;
       grid-row: 2 / span 1;
-      color: $title-color;
-      font-size: $title-size;
-      font-family: MyriadPro-It;
+      font-family: AvenirLT;
+      font-size: 55px;
+      font-weight: 900;
+      font-style: oblique;
+      font-stretch: normal;
+      line-height: 1.18;
+      letter-spacing: normal;
+      text-align: left;
+      color: #ffffff;
     }
 
     .contents {
       grid-column: 2 / span 1;
       grid-row: 3 / span 1;
-      color: $contents-color;
-      font-size: $contents-size;
-      font-family: $contents-family;
       display: flex;
       align-items: center;
       .text {
         height: auto;
+        font-family: NotoSansCJKkr;
+        font-size: 45px;
+        font-weight: 300;
+        color: #ffffff;
       }
     }
     .register_rect {
@@ -98,7 +105,7 @@ body {
         height: 20px;
         color: #83d1e6;
         font-size: 20px;
-        font-family: Arita-dotum-Medium_TTF;
+        font-family: NotoSansCJKkr;
         text-overflow: ellipsis;
         white-space: nowrap;
         cursor: pointer;
@@ -172,7 +179,7 @@ body {
           background-color: transparent;
           font-size: 35px;
           color: #7a7a7a;
-          font-family: NotoSansCJKkr;
+          font-family: AvenirLT;
           height: 52px;
           margin-left: 126px;
           cursor: pointer;
