--- a/src/containers/LoginPopup/LoginPopup.scss
+++ b/src/containers/LoginPopup/LoginPopup.scss
@@ -59,13 +59,13 @@
     }
     .title {
       width: 100%;
-      height: 64px;
-      font-family: LasEnterPersonalUseOnly;
+      height: 65px;
+      font-family: AvenirLT;
       font-size: 55px;
-      font-weight: normal;
-      font-style: normal;
+      font-weight: 900;
+      font-style: oblique;
       font-stretch: normal;
-      line-height: 1.16;
+      line-height: 1.18;
       letter-spacing: normal;
       text-align: center;
       color: #ff365d;
@@ -79,6 +79,7 @@
       height: 40px;
       border-radius: 18px;
       border-color: transparent;
+      font-family: NotoSansCJKkr;
       font-size: 12px;
       outline: none;
       margin-bottom: 30px;
@@ -207,12 +208,12 @@
     .title {
       width: 100%;
       height: 64px;
-      font-family: LasEnterPersonalUseOnly;
+      font-family: AvenirLT;
       font-size: 55px;
-      font-weight: normal;
-      font-style: normal;
+      font-weight: 900;
+      font-style: oblique;
       font-stretch: normal;
-      line-height: 1.16;
+      line-height: 1.18;
       letter-spacing: normal;
       text-align: center;
       color: #ff365d;
@@ -243,6 +244,7 @@
           border: 0px none;
           border-radius: 18px;
           border-color: transparent;
+          font-family: NotoSansCJKkr;
           font-size: 12px;
           outline: none;
           color: #ff365d;
@@ -266,17 +268,18 @@
 
         .show_idcheck {
           display: inline-block;
-          width: 30px;
-          height: 30px;
+          width: 25px;
+          height: 25px;
           border-radius: 18px;
           border: 0px none;
           border-color: transparent;
-          background-color: white;
+          background-color: #ff365d;
           background-image: url("../../static/images/round_clear.svg");
           background-repeat: no-repeat;
           background-size: contain;
 
           &.ok {
+            background-color: #83d1e6;
             background-image: url("../../static/images/round_done.svg");
           }
         }
@@ -286,13 +289,13 @@
       }
     }
 
-    .pwd,
-    .pwdrecheck {
+    .pwd {
       background-color: #080f24;
       width: 357px;
       height: 40px;
       border-radius: 18px;
       border-color: transparent;
+      font-family: NotoSansCJKkr;
       font-size: 12px;
       outline: none;
       margin-bottom: 30px;
@@ -309,12 +312,75 @@
       }
     }
 
+    .recheck_rect {
+      width: auto;
+      height: auto;
+      display: flex;
+      justify-content: center;
+      .recheck_container {
+        background-color: #080f24;
+        border: 2px solid;
+        border-radius: 18px;
+        border-color: transparent;
+        padding: 1px;
+        width: 357px;
+        height: 40px;
+        display: flex;
+        margin-bottom: 30px;
+        align-items: center;
+
+        .pwdrecheck {
+          width: 317px;
+          height: 40px;
+          background-color: #080f24;
+          border: 0px none;
+          border-radius: 18px;
+          border-color: transparent;
+          font-family: NotoSansCJKkr;
+          font-size: 12px;
+          outline: none;
+          color: #ff365d;
+          text-indent: 17px;
+
+          &:focus {
+            font-size: 20px;
+          }
+
+          &::placeholder {
+            color: #ff365d;
+          }
+        }
+
+        .show_pwdrecheck {
+          display: inline-block;
+          width: 25px;
+          height: 25px;
+          border-radius: 18px;
+          border: 0px none;
+          border-color: transparent;
+          background-color: #ff365d;
+          background-image: url("../../static/images/round_clear.svg");
+          background-repeat: no-repeat;
+          background-size: contain;
+
+          &.ok {
+            background-color: #83d1e6;
+            background-image: url("../../static/images/round_done.svg");
+          }
+        }
+        &:focus-within {
+          border: solid 2px #ff365d;
+        }
+      }
+    }
+
     .register {
       width: 357px;
       height: 40px;
       border-radius: 18px;
       border-color: transparent;
-      background-color: #7a7a7a;
+      background-color: #bbbbbb;
+      font-family: NotoSansCJKkr;
       font-size: 20px;
       color: #080f24;
       text-align: center;
@@ -326,7 +392,8 @@
       height: 40px;
       border-radius: 18px;
       border-color: transparent;
-      background-color: #7a7a7a;
+      background-color: #bbbbbb;
+      font-family: NotoSansCJKkr;
       font-size: 20px;
       color: #080f24;
       text-align: center;
