--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -137,12 +137,39 @@
     position: absolute;
   }
 
-  .searchresultrect {
+  .searchresult_rect {
     width: 100%;
     height: 100%;
     position: absolute;
     grid-column: 2 / span 1;
     grid-row: 3 / span 1;
+    background-color: #0f1835;
+    display: grid;
+    grid-template-rows: 47px auto;
+
+    .filter_rect {
+      grid-row: 1 / span 1;
+      background-color: transparent;
+      height: auto;
+      display: flex;
+      justify-content: flex-end;
+
+      .filter {
+        background-color: transparent;
+        width: 123px;
+        min-width: 123px;
+        height: auto;
+        line-height: 1.8;
+      }
+    }
+
+    .searchresultrect {
+      position: absolute;
+      background-color: transparent;
+      width: 100%;
+      height: 100%;
+      grid-row: 2 / span 1;
+    }
 
     // div {
     //   -ms-overflow-style: none; // IE에서 스크롤바 감춤
