--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -27,13 +27,15 @@ body {
   background-color: $main-color;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 80px 215px 115px auto;
+  // grid-template-rows: 80px 215px 115px auto;
+  grid-template-rows: 215px 115px auto;
 
-  //헤더 Style
-  .header {
-    height: auto;
-    grid-column: 1 / span 5;
-  }
+  // //헤더 Style
+  // .header {
+  //   height: auto;
+  //   grid-column: 1 / span 5;
+  // }
+
   //중간 text Style
   .explanation_rect {
     grid-column: 1 / span 5;
