### #35 메인/검색 고도화 See: Github issue #35 --------------------------------------- ### 작업파일 * Header.jsx/scss * MainView.jsx/scss * MyMenu.jsx * SearchResult.jsx * App.js/css --------------------------------------- ### 작업내용 * App Header 영역 style 설정(검색 open 시 밑에 layout이 올라오는 문제) * Combo 컴포넌트 id, value 추가 : 검색결과 나온 상태에서 재검색 시 필터 초기화 * SearchResult에서 인자로 값 받아서 보여주도록 수정

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -1,10 +1,11 @@
 .container {
   height: 80px;
+  z-index: 100;
 
   &._over {
     position: absolute;
     width: 100%;
-    height: inherit;
+    height: auto;
     display: grid;
     grid-template-columns: 201.5px auto 201px;
     grid-template-rows: 80px 265px auto;
