--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,18 @@
 ﻿.App {
+  position: absolute;
+  display: grid;
+  grid-template-rows: 80px auto;
+  height: 100%;
+  width: 100%;
   .top {
-    height: 80px;
+    grid-row: 1 / span 1;
+    height: 100%;
+    width: 100%;
+  }
+  .body {
+    position: absolute;
+    grid-row: 2 / span 1;
+    height: 100%;
+    width: 100%;
   }
 }
