### #38 검색/검색결과 기능 수정 및 추가 See: Github issue #38 --------------------------------------- ### 작업파일 * Header.jsx/scss * MyMenu.jsx * SearchResult.jsx * userSaga.js --------------------------------------- ### 작업내용 * 스크롤 시 검색창 사라지도록 수정 * 검색창 사라지고 검색 결과 창 scroll 시 append event 미발생 해결해야함.

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -136,6 +136,9 @@
     grid-column: 2 / span 1;
     grid-row: 2 / span 1;
     position: absolute;
+    &._hide {
+      display: none;
+    }
   }
 
   .searchresult_rect {
@@ -170,6 +173,10 @@
       width: 100%;
       height: 100%;
       grid-row: 2 / span 1;
+    }
+
+    &._over {
+      grid-row: 2 / span 2;
     }
 
     // div {
