--- a/src/containers/LoginPopup/LoginPopup.scss
+++ b/src/containers/LoginPopup/LoginPopup.scss
@@ -461,7 +461,60 @@
         outline: none;
       }
     }
+    .notifypopup_rect {
+      position: absolute;
+      background-color: transparent;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .showNotifyPopup {
+        width: 250px;
+        height: 100px;
 
+        .text {
+          display: inline-block;
+          width: 100%;
+          background-color: yellow;
+        }
+
+        .container {
+          width: 100%;
+          height: 100%;
+          background-color: green;
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+
+          .ok {
+            width: 100px;
+            height: 30px;
+
+            border-radius: 18px;
+            border-color: transparent;
+            background-color: #bbbbbb;
+            font-family: NotoSansCJKkr;
+            font-size: 20px;
+            color: #080f24;
+            text-align: center;
+            cursor: pointer;
+          }
+          .cancel {
+            width: 100px;
+            height: 30px;
+
+            border-radius: 18px;
+            border-color: transparent;
+            background-color: #7a7a7a;
+            font-family: NotoSansCJKkr;
+            font-size: 20px;
+            color: #080f24;
+            cursor: pointer;
+          }
+        }
+      }
+    }
     .title {
       width: 100%;
       height: 64px;
