### #38 검색/검색결과 기능 수정 및 추가 See: Github issue #38 --------------------------------------- ### 작업파일 * Header.scss --------------------------------------- ### 작업내용 * 모바일 접속 시 검색결과 layout 수정

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -185,5 +185,11 @@
     //     display: none !important; // 윈도우 크롬 등
     //   }
     // }
+
+    @media (max-width: 470px) {
+      & {
+        grid-column: 1 / span 3;
+      }
+    }
   }
 }
