### #35 메인/검색 고도화 See: Github issue #35 --------------------------------------- ### 작업파일 * SearchResult.jsx/scss --------------------------------------- ### 작업내용 * 검색 결과 보여줄 시 스크랩 숫자에 따른 이미지 크기 조절

--- a/src/containers/SearchResult/SearchResult.scss
+++ b/src/containers/SearchResult/SearchResult.scss
@@ -1,7 +1,15 @@
 .item {
   max-width: 360px;
   opacity: 1;
-  height: auto;
+  height: 420px;
+  &.big {
+    background-color: red;
+    height: 590px;
+  }
+  &.middle {
+    background-color: blue;
+    height: 500px;
+  }
 
   img {
     width: 100%;
