--- a/src/containers/LoginPopup/LoginPopup.scss
+++ b/src/containers/LoginPopup/LoginPopup.scss
@@ -472,17 +472,24 @@
       .showNotifyPopup {
         width: 250px;
         height: 100px;
+        background-color: #0f1835;
 
         .text {
           display: inline-block;
           width: 100%;
-          background-color: yellow;
+          height: 40px;
+          background-color: transparent;
+          font-family: NotoSansCJKkr;
+          font-weight: bold;
+          font-size: 25px;
+          line-height: 1.8;
+          color: #ff365d;
         }
 
         .container {
           width: 100%;
-          height: 100%;
-          background-color: green;
+          height: 60px;
+          background-color: transparent;
           display: flex;
           justify-content: space-around;
           align-items: center;
