--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -145,50 +145,58 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    grid-column: 2 / span 1;
     grid-row: 3 / span 1;
     background-color: #0f1835;
     display: grid;
-    grid-template-rows: 47px auto;
+    grid-template-columns: 201.5px auto 201px;
 
-    .filter_rect {
-      grid-row: 1 / span 1;
-      background-color: transparent;
-      height: auto;
-      display: flex;
-      justify-content: flex-end;
-
-      .filter {
-        background-color: transparent;
-        width: 123px;
-        min-width: 123px;
-        height: auto;
-        line-height: 1.8;
-      }
-    }
-
-    .searchresultrect {
-      position: absolute;
-      background-color: transparent;
+    .searchresult_container {
       width: 100%;
       height: 100%;
-      grid-row: 2 / span 1;
-    }
+      position: absolute;
+      grid-column: 2 / span 1;
+      display: grid;
+      grid-template-rows: 47px auto;
 
-    &._over {
-      grid-row: 2 / span 2;
-    }
+      .filter_rect {
+        grid-row: 1 / span 1;
+        background-color: transparent;
+        height: auto;
+        display: flex;
+        justify-content: flex-end;
 
-    // div {
-    //   -ms-overflow-style: none; // IE에서 스크롤바 감춤
-    //   &::-webkit-scrollbar {
-    //     display: none !important; // 윈도우 크롬 등
-    //   }
-    // }
+        .filter {
+          background-color: transparent;
+          width: 123px;
+          min-width: 123px;
+          height: auto;
+          line-height: 1.8;
+        }
+      }
 
-    @media (max-width: 470px) {
-      & {
-        grid-column: 1 / span 3;
+      .searchresult {
+        position: absolute;
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+        grid-row: 2 / span 1;
+      }
+
+      &._over {
+        grid-row: 2 / span 2;
+      }
+
+      // div {
+      //   -ms-overflow-style: none; // IE에서 스크롤바 감춤
+      //   &::-webkit-scrollbar {
+      //     display: none !important; // 윈도우 크롬 등
+      //   }
+      // }
+
+      @media (max-width: 470px) {
+        & {
+          grid-column: 1 / span 3;
+        }
       }
     }
   }
