### #38 검색/검색결과 기능 수정 및 추가 See: Github issue #38 --------------------------------------- ### 작업파일 * MyMenu.scss * SearchResult.jsx/scss --------------------------------------- ### 작업내용 * MyMenu IE계열 스크롤바 스크롤 시 에만 나타나는 css 추가(크롬계열은 못찾음) * 검색결과 스크롤 시 로딩 나오도록 추가

--- a/src/containers/MyMenu/MyMenu.scss
+++ b/src/containers/MyMenu/MyMenu.scss
@@ -129,5 +129,12 @@ body {
     width: 100%;
     height: 100%;
     grid-row: 2 / span 1;
+
+    // div {
+    // -ms-overflow-style: -ms-autohiding-scrollbar; // IE에서 스크롤바 감춤
+    // &::-webkit-scrollbar {
+    //   display: none !important; // 윈도우 크롬 등
+    // }
+    // }
   }
 }
