--- a/src/containers/SearchResult/SearchResult.scss
+++ b/src/containers/SearchResult/SearchResult.scss
@@ -122,3 +122,10 @@
     }
   }
 }
+.loding_rect {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
