--- a/src/components/SearchResultItem/SearchResultItem.scss
+++ b/src/components/SearchResultItem/SearchResultItem.scss
@@ -2,6 +2,13 @@
 .item_img {
   width: inherit;
   height: inherit;
+
+  &._xbox {
+    min-width: 360px;
+    min-height: 420px;
+    background-color: gray;
+    opacity: 0.5;
+  }
 }
 
 .modify_rect {
