### #35 메인/검색 고도화 See: Github issue #35 --------------------------------------- ### 작업파일 * Header.jsx/scss * SearhPopup.jsx * SearchResultOff.svg --------------------------------------- ### 작업내용 * 구글 메테리얼 디자인 이미지 추가 * 검색 결과 미 존재 시 layout 추가 * 검색창 닫을 때 초기화 조건 검색단어 존재로 판단

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -221,6 +221,32 @@
         grid-row: 2 / span 1;
       }
 
+      .notresult_rect {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        .image_rect {
+          width: 40%;
+          height: 40%;
+          background-image: url("../../static/images/SearchResultOff.svg");
+          background-repeat: no-repeat;
+          background-size: contain;
+          background-position: center;
+        }
+        .text_rect {
+          width: auto;
+          height: auto;
+          font-family: NotoSansCJKkr;
+          font-size: 30px;
+          color: white;
+        }
+      }
+
       // div {
       //   -ms-overflow-style: none; // IE에서 스크롤바 감춤
       //   &::-webkit-scrollbar {
