--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -213,6 +213,17 @@
         }
       }
 
+      .loading_rect {
+        position: absolute;
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+      }
+
       .searchresult {
         position: absolute;
         background-color: transparent;
