--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -27,14 +27,10 @@ body {
   background-color: $main-color;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  // grid-template-rows: 80px 215px 115px auto;
   grid-template-rows: 215px 115px auto;
-
-  // //헤더 Style
-  // .header {
-  //   height: auto;
-  //   grid-column: 1 / span 5;
-  // }
+  position: absolute;
+  width: 100%;
+  height: 100%;
 
   //중간 text Style
   .explanation_rect {
@@ -42,7 +38,6 @@ body {
     display: grid;
     grid-template-columns: 20.5% 755px auto;
     grid-template-rows: 92.8px 57px 66px;
-    // padding-top: 92.8px;
 
     .left {
       grid-column: 1 / span 1;
@@ -214,13 +209,12 @@ body {
   }
   //cocktail 결과 Layout style
   .image_rect {
+    position: absolute;
+    grid-row: 3 / span 1;
     grid-column: 1 / span 5;
-    // padding-left: 20.5%;
-    // max-width: 1518px;
-    width: auto;
+    width: 100%;
     height: 100%;
     background-color: $main-color;
-
     display: flex;
 
     .innercontainer {
