### #35 메인/검색 고도화 See: Github issue #35 --------------------------------------- ### 작업파일 * App.js/scss --------------------------------------- ### 작업내용 * url에 따른 body div 수정

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,9 +2,13 @@
   position: absolute;
   display: grid;
   grid-template-rows: 80px auto;
+  &.one {
+    grid-template-rows: auto;
+  }
   height: 100%;
   width: 100%;
   .top {
+    position: absolute;
     grid-row: 1 / span 1;
     height: 100%;
     width: 100%;
